[tool.poetry]
name = "Medieval Battles"
version = "0.1.0"
description = ""
authors = ["Andrei Durbaca <andrei.swindon@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
pygame = "^2.1.2"
pgzero = "^1.2.1"
easygui = "^0.98.3"
fonts = "^0.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"